--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <img src="./img/project/project 7.jpeg" alt="Coding Aja">
                 </div>
                 <div class="content">
-                    <a href="https://github.com/xrafffcode/coding-aja-web"><i class="bi bi-link-45deg"></i></a>
+                    <a href="https://coding-aja.000webhostapp.com/index.php"><i class="bi bi-link-45deg"></i></a>
                     <h3>Website</h3>
                 </div>
             </div>
